// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dataops-dynamodb Snapshot Tests DynamoDb App App Snapshot Test 1`] = `
{
  "test-org-test-env-test-domain-test-dynamodb-main": {
    "Description": "(SO0320-dataops-dynamodb) Modern Data Architecture Accelerator. Version 1.1.0",
    "Parameters": {
      "BootstrapVersion": {
        "Default": "/cdk-bootstrap/hnb659fds/version",
        "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/caef-bootstrap/role-helper-service-token",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojectsampledeploymentRoledefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-sample/deploymentRole/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojectsamplekmsArndefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-sample/kmsArn/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojectsampleprojectBucketdefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-sample/projectBucket/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojectsampleprojectTopicArndefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-sample/projectTopicArn/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojectsamplesecurityConfigurationdefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-sample/securityConfiguration/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
    },
    "Resources": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Stack description parameter to update on version changes",
          "Name": "/test-org/test-domain/test-dynamodb-main/aws-solution",
          "Tags": {
            "mdaa_cdk_app": "dataops-dynamodb",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-dynamodb-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "(SO0320-dataops-dynamodb) Modern Data Architecture Accelerator. Version 1.1.0",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DeletionPolicy": "Retain",
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "HIPAA.Security-DynamoDBInBackupPlan",
                "reason": "[MDAA:@aws-mdaa/ddb-constructs/lib/index.ts:LINE:COL] MDAA does not enforce use of AWS Backup",
              },
              {
                "id": "PCI.DSS.321-DynamoDBInBackupPlan",
                "reason": "[MDAA:@aws-mdaa/ddb-constructs/lib/index.ts:LINE:COL] MDAA does not enforce use of AWS Backup",
              },
              {
                "id": "NIST.800.53.R5-DynamoDBInBackupPlan",
                "reason": "[MDAA:@aws-mdaa/ddb-constructs/lib/index.ts:LINE:COL] MDAA does not enforce use of AWS Backup",
              },
              {
                "id": "NIST.800.53.R5-DynamoDBAutoScalingEnabled",
                "reason": "[MDAA:@aws-mdaa/ddb-constructs/lib/index.ts:LINE:COL] MDAA does not enforce use of Auto Scaling on Provisioned Capacity tables.",
              },
              {
                "id": "HIPAA.Security-DynamoDBAutoScalingEnabled",
                "reason": "[MDAA:@aws-mdaa/ddb-constructs/lib/index.ts:LINE:COL] MDAA does not enforce use of Auto Scaling on Provisioned Capacity tables.",
              },
              {
                "id": "PCI.DSS.321-DynamoDBAutoScalingEnabled",
                "reason": "[MDAA:@aws-mdaa/ddb-constructs/lib/index.ts:LINE:COL] MDAA does not enforce use of Auto Scaling on Provisioned Capacity tables.",
              },
            ],
          },
        },
        "Properties": {
          "AttributeDefinitions": [
            {
              "AttributeName": "pk1",
              "AttributeType": "S",
            },
            {
              "AttributeName": "sk1",
              "AttributeType": "S",
            },
          ],
          "DeletionProtectionEnabled": true,
          "KeySchema": [
            {
              "AttributeName": "pk1",
              "KeyType": "HASH",
            },
            {
              "AttributeName": "sk1",
              "KeyType": "RANGE",
            },
          ],
          "PointInTimeRecoverySpecification": {
            "PointInTimeRecoveryEnabled": true,
          },
          "ProvisionedThroughput": {
            "ReadCapacityUnits": 2,
            "WriteCapacityUnits": 1,
          },
          "SSESpecification": {
            "KMSMasterKeyId": {
              "Ref": "SsmParameterValuetestorgtestdomaindataopsprojectsamplekmsArndefaultC96584B6F00A464EAD1953AFF4B05118Parameter",
            },
            "SSEEnabled": true,
            "SSEType": "KMS",
          },
          "TableName": "test-org-test-env-test-domain-test-dynamodb-main-table-complex",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-dynamodb",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-dynamodb-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "TimeToLiveSpecification": {
            "AttributeName": "ttl",
            "Enabled": true,
          },
        },
        "Type": "AWS::DynamoDB::Table",
        "UpdateReplacePolicy": "Retain",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DeletionPolicy": "Retain",
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "HIPAA.Security-DynamoDBInBackupPlan",
                "reason": "[MDAA:@aws-mdaa/ddb-constructs/lib/index.ts:LINE:COL] MDAA does not enforce use of AWS Backup",
              },
              {
                "id": "PCI.DSS.321-DynamoDBInBackupPlan",
                "reason": "[MDAA:@aws-mdaa/ddb-constructs/lib/index.ts:LINE:COL] MDAA does not enforce use of AWS Backup",
              },
              {
                "id": "NIST.800.53.R5-DynamoDBInBackupPlan",
                "reason": "[MDAA:@aws-mdaa/ddb-constructs/lib/index.ts:LINE:COL] MDAA does not enforce use of AWS Backup",
              },
              {
                "id": "NIST.800.53.R5-DynamoDBAutoScalingEnabled",
                "reason": "[MDAA:@aws-mdaa/ddb-constructs/lib/index.ts:LINE:COL] MDAA does not enforce use of Auto Scaling on Provisioned Capacity tables.",
              },
              {
                "id": "HIPAA.Security-DynamoDBAutoScalingEnabled",
                "reason": "[MDAA:@aws-mdaa/ddb-constructs/lib/index.ts:LINE:COL] MDAA does not enforce use of Auto Scaling on Provisioned Capacity tables.",
              },
              {
                "id": "PCI.DSS.321-DynamoDBAutoScalingEnabled",
                "reason": "[MDAA:@aws-mdaa/ddb-constructs/lib/index.ts:LINE:COL] MDAA does not enforce use of Auto Scaling on Provisioned Capacity tables.",
              },
            ],
          },
        },
        "Properties": {
          "AttributeDefinitions": [
            {
              "AttributeName": "pk1",
              "AttributeType": "S",
            },
          ],
          "BillingMode": "PAY_PER_REQUEST",
          "DeletionProtectionEnabled": true,
          "KeySchema": [
            {
              "AttributeName": "pk1",
              "KeyType": "HASH",
            },
          ],
          "PointInTimeRecoverySpecification": {
            "PointInTimeRecoveryEnabled": true,
          },
          "SSESpecification": {
            "KMSMasterKeyId": {
              "Ref": "SsmParameterValuetestorgtestdomaindataopsprojectsamplekmsArndefaultC96584B6F00A464EAD1953AFF4B05118Parameter",
            },
            "SSEEnabled": true,
            "SSEType": "KMS",
          },
          "TableName": "test-org-test-env-test-domain-test-dynamodb-main-table-simple",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-dynamodb",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-dynamodb-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DynamoDB::Table",
        "UpdateReplacePolicy": "Retain",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/dataops-project-sample/dynamodb/name/table-complex",
          "Tags": {
            "mdaa_cdk_app": "dataops-dynamodb",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-dynamodb-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Ref": "REPLACED-CFN-LOGICAL-ID",
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/dataops-project-sample/dynamodb/name/table-simple",
          "Tags": {
            "mdaa_cdk_app": "dataops-dynamodb",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-dynamodb-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Ref": "REPLACED-CFN-LOGICAL-ID",
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
    },
    "Rules": {
      "CheckBootstrapVersion": {
        "Assertions": [
          {
            "Assert": {
              "Fn::Not": [
                {
                  "Fn::Contains": [
                    [
                      "1",
                      "2",
                      "3",
                      "4",
                      "5",
                    ],
                    {
                      "Ref": "BootstrapVersion",
                    },
                  ],
                },
              ],
            },
            "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
          },
        ],
      },
    },
  },
}
`;

exports[`dataops-dynamodb Snapshot Tests DynamoDb Stack Snapshot Test 1`] = `
{
  "Description": "(SO0320-dataops-dynamodb) Modern Data Architecture Accelerator. Version 1.1.0",
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/test-org/test-domain/caef-bootstrap/role-helper-service-token",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuetestorgtestdomaindataopsprojectsampledeploymentRoledefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/test-org/test-domain/dataops-project-sample/deploymentRole/default",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuetestorgtestdomaindataopsprojectsamplekmsArndefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/test-org/test-domain/dataops-project-sample/kmsArn/default",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuetestorgtestdomaindataopsprojectsampleprojectBucketdefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/test-org/test-domain/dataops-project-sample/projectBucket/default",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuetestorgtestdomaindataopsprojectsampleprojectTopicArndefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/test-org/test-domain/dataops-project-sample/projectTopicArn/default",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuetestorgtestdomaindataopsprojectsamplesecurityConfigurationdefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/test-org/test-domain/dataops-project-sample/securityConfiguration/default",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Description": "Stack description parameter to update on version changes",
        "Name": "/test-org/test-domain/test-dynamodb-main/aws-solution",
        "Tags": {
          "mdaa_cdk_app": "dataops-dynamodb",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-dynamodb-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": "(SO0320-dataops-dynamodb) Modern Data Architecture Accelerator. Version 1.1.0",
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "DeletionPolicy": "Retain",
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "HIPAA.Security-DynamoDBInBackupPlan",
              "reason": "[MDAA:@aws-mdaa/ddb-constructs/lib/index.ts:LINE:COL] MDAA does not enforce use of AWS Backup",
            },
            {
              "id": "PCI.DSS.321-DynamoDBInBackupPlan",
              "reason": "[MDAA:@aws-mdaa/ddb-constructs/lib/index.ts:LINE:COL] MDAA does not enforce use of AWS Backup",
            },
            {
              "id": "NIST.800.53.R5-DynamoDBInBackupPlan",
              "reason": "[MDAA:@aws-mdaa/ddb-constructs/lib/index.ts:LINE:COL] MDAA does not enforce use of AWS Backup",
            },
            {
              "id": "NIST.800.53.R5-DynamoDBAutoScalingEnabled",
              "reason": "[MDAA:@aws-mdaa/ddb-constructs/lib/index.ts:LINE:COL] MDAA does not enforce use of Auto Scaling on Provisioned Capacity tables.",
            },
            {
              "id": "HIPAA.Security-DynamoDBAutoScalingEnabled",
              "reason": "[MDAA:@aws-mdaa/ddb-constructs/lib/index.ts:LINE:COL] MDAA does not enforce use of Auto Scaling on Provisioned Capacity tables.",
            },
            {
              "id": "PCI.DSS.321-DynamoDBAutoScalingEnabled",
              "reason": "[MDAA:@aws-mdaa/ddb-constructs/lib/index.ts:LINE:COL] MDAA does not enforce use of Auto Scaling on Provisioned Capacity tables.",
            },
          ],
        },
      },
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "pk1",
            "AttributeType": "S",
          },
          {
            "AttributeName": "sk1",
            "AttributeType": "S",
          },
        ],
        "DeletionProtectionEnabled": true,
        "KeySchema": [
          {
            "AttributeName": "pk1",
            "KeyType": "HASH",
          },
          {
            "AttributeName": "sk1",
            "KeyType": "RANGE",
          },
        ],
        "PointInTimeRecoverySpecification": {
          "PointInTimeRecoveryEnabled": true,
        },
        "ProvisionedThroughput": {
          "ReadCapacityUnits": 2,
          "WriteCapacityUnits": 1,
        },
        "SSESpecification": {
          "KMSMasterKeyId": {
            "Ref": "SsmParameterValuetestorgtestdomaindataopsprojectsamplekmsArndefaultC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "SSEEnabled": true,
          "SSEType": "KMS",
        },
        "TableName": "test-org-test-env-test-domain-test-dynamodb-main-table-complex",
        "Tags": [
          {
            "Key": "mdaa_cdk_app",
            "Value": "dataops-dynamodb",
          },
          {
            "Key": "mdaa_domain",
            "Value": "test-domain",
          },
          {
            "Key": "mdaa_env",
            "Value": "test-env",
          },
          {
            "Key": "mdaa_module_name",
            "Value": "test-dynamodb-main",
          },
          {
            "Key": "mdaa_org",
            "Value": "test-org",
          },
        ],
        "TimeToLiveSpecification": {
          "AttributeName": "ttl",
          "Enabled": true,
        },
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Retain",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "DeletionPolicy": "Retain",
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "HIPAA.Security-DynamoDBInBackupPlan",
              "reason": "[MDAA:@aws-mdaa/ddb-constructs/lib/index.ts:LINE:COL] MDAA does not enforce use of AWS Backup",
            },
            {
              "id": "PCI.DSS.321-DynamoDBInBackupPlan",
              "reason": "[MDAA:@aws-mdaa/ddb-constructs/lib/index.ts:LINE:COL] MDAA does not enforce use of AWS Backup",
            },
            {
              "id": "NIST.800.53.R5-DynamoDBInBackupPlan",
              "reason": "[MDAA:@aws-mdaa/ddb-constructs/lib/index.ts:LINE:COL] MDAA does not enforce use of AWS Backup",
            },
            {
              "id": "NIST.800.53.R5-DynamoDBAutoScalingEnabled",
              "reason": "[MDAA:@aws-mdaa/ddb-constructs/lib/index.ts:LINE:COL] MDAA does not enforce use of Auto Scaling on Provisioned Capacity tables.",
            },
            {
              "id": "HIPAA.Security-DynamoDBAutoScalingEnabled",
              "reason": "[MDAA:@aws-mdaa/ddb-constructs/lib/index.ts:LINE:COL] MDAA does not enforce use of Auto Scaling on Provisioned Capacity tables.",
            },
            {
              "id": "PCI.DSS.321-DynamoDBAutoScalingEnabled",
              "reason": "[MDAA:@aws-mdaa/ddb-constructs/lib/index.ts:LINE:COL] MDAA does not enforce use of Auto Scaling on Provisioned Capacity tables.",
            },
          ],
        },
      },
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "pk1",
            "AttributeType": "S",
          },
        ],
        "BillingMode": "PAY_PER_REQUEST",
        "DeletionProtectionEnabled": true,
        "KeySchema": [
          {
            "AttributeName": "pk1",
            "KeyType": "HASH",
          },
        ],
        "PointInTimeRecoverySpecification": {
          "PointInTimeRecoveryEnabled": true,
        },
        "SSESpecification": {
          "KMSMasterKeyId": {
            "Ref": "SsmParameterValuetestorgtestdomaindataopsprojectsamplekmsArndefaultC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "SSEEnabled": true,
          "SSEType": "KMS",
        },
        "TableName": "test-org-test-env-test-domain-test-dynamodb-main-table-simple",
        "Tags": [
          {
            "Key": "mdaa_cdk_app",
            "Value": "dataops-dynamodb",
          },
          {
            "Key": "mdaa_domain",
            "Value": "test-domain",
          },
          {
            "Key": "mdaa_env",
            "Value": "test-env",
          },
          {
            "Key": "mdaa_module_name",
            "Value": "test-dynamodb-main",
          },
          {
            "Key": "mdaa_org",
            "Value": "test-org",
          },
        ],
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Retain",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Name": "/test-org/test-domain/dataops-project-sample/dynamodb/name/table-complex",
        "Tags": {
          "mdaa_cdk_app": "dataops-dynamodb",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-dynamodb-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": {
          "Ref": "REPLACED-CFN-LOGICAL-ID",
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Name": "/test-org/test-domain/dataops-project-sample/dynamodb/name/table-simple",
        "Tags": {
          "mdaa_cdk_app": "dataops-dynamodb",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-dynamodb-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": {
          "Ref": "REPLACED-CFN-LOGICAL-ID",
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
